# digit-recognizer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  create_dummy_model.py  generate_test_images.py  package-lock.json  package.json  readme.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  codeql.yaml  docs.yaml  docs.yml  lint-and-format.yml  python-quality.yml  release.yaml  release.yml  security.yml  test.yml
client/: .eslintrc.js  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.jsx  index.css
docs/: api.md  architecture.md  browser-support.md  contributing.md  development.md  github-actions.md  installation.md  macos-ssl-troubleshooting.md  ml-details.md  production-deployment.md  quick-reference.md  security.md  troubleshooting.md
ml/: .flake8  README.md  predict.py  pyproject.toml  requirements.txt  setup.cfg  svm_model.pkl  train_improved_model.py  train_model.py  train_simple_model.py  train_with_test_images.py
scripts/: build-docs.sh  ssl-fix.sh
server/: .eslintrc.js  index.js  package-lock.json  package.json
server/middleware/: auth.js
server/routes/: predict.js
tasks/: report.md  todo.md  todo_prev.md
test/: README.md
wiki/: Home.md  README.md
