[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digit-recognizer-ml"
version = "1.0.0"
description = "機械学習による手書き数字認識モジュール"
authors = [{name = "Digit Recognizer Team"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
    "pillow>=8.0.0",
    "joblib>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/yuki/digit-recognizer"
Repository = "https://github.com/yuki/digit-recognizer"

[tool.black]
# BlackはPythonコードの自動フォーマッターです
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# isortはPythonのimport文を整理するツールです
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
profile = "black"